--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "body-parser": "^1.15.2",
     "cors": "^2.8.5",
     "express": "^4.14.0",
+    "fs": "0.0.1-security",
+    "http": "0.0.0",
     "mongoose": "^5.0.0",
     "morgan": "^1.7.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "chai": "^3.5.0",
